--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <link rel="stylesheet" type="text/css" href="Weather_App/styles/inline.css">
 
   <!-- TODO add manifest here -->
-  <link rel="manifest" href="Weather_App/manifest.json">
+  <link rel="manifest" href="/manifest.json">
   <!-- Add to home screen for Safari on iOS -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -40,7 +40,7 @@
     <h1 class="header__title">My Location Weather</h1>
   </header>
 
-  <main class="main" style="background-image:url(images/we.jpg);">
+  <main class="main" style="background-image:url(Weather_App/images/we.jpg);">
     <div class="card cardTemplate weather-forecast" hidden>
       <div class="city-key" hidden></div>
       <div class="card-last-updated" hidden></div>
@@ -149,7 +149,7 @@
   </div>
 
   <!-- Uncomment the line below when ready to test with fake data -->
-  <script src="scripts/app.js" async></script>
+  <script src="Weather_App/scripts/app.js" async></script>
 
 </body>
 </html>
