--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Weather PWA</title>
   <link rel="stylesheet" type="text/css" href="Weather_App/styles/inline.css">
-
+<meta http-equiv="cache-control" content="max-age=0" />
+<meta http-equiv="cache-control" content="no-cache" />
+<meta http-equiv="expires" content="0" />
+<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+<meta http-equiv="pragma" content="no-cache" />
   <!-- TODO add manifest here -->
   <link rel="manifest" href="/manifest.json">
   <!-- Add to home screen for Safari on iOS -->
