--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link rel="canonical" href="https://weather-pwa-sample.firebaseapp.com/final/">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Weather PWA</title>
-  <link rel="stylesheet" type="text/css" href="Weather_App/styles/inline.css">
+  <link rel="stylesheet" type="text/css" href="styles/inline.css">
 <meta http-equiv="cache-control" content="max-age=0" />
 <meta http-equiv="cache-control" content="no-cache" />
 <meta http-equiv="expires" content="0" />
@@ -44,7 +44,7 @@
     <h1 class="header__title">My Location Weather</h1>
   </header>
 
-  <main class="main" style="background-image:url(Weather_App/images/we.jpg);">
+  <main class="main" style="background-image:url(images/we.jpg);">
     <div class="card cardTemplate weather-forecast" hidden>
       <div class="city-key" hidden></div>
       <div class="card-last-updated" hidden></div>
@@ -153,7 +153,7 @@
   </div>
 
   <!-- Uncomment the line below when ready to test with fake data -->
-  <script src="Weather_App/scripts/app.js" async></script>
+  <script src="scripts/app.js" async></script>
 
 </body>
 </html>
